[1.7.1]
- Fixes AtlasTmxMapLoader region name loading to tileset name instead of filename
- Changes TiledMapPacker output, region names are tileset names, adjusts gid, defaults to one atlas per map
- API Change: members of Renderable and MeshPart are changed, see https://github.com/libgdx/libgdx/pull/3483

[1.7.0]
- Gdx.input.setCursorImage removed, replaced with Gdx.graphics.setCursor and Gdx.graphics.newCursor see https://github.com/libgdx/libgdx/pull/2841/
- Fixed an issue with UTF8 decoding in GWT emulation of InputStreamReader
- Updated to RoboVM 1.8 for iOS 9 support.

[1.6.5]
- Objects from animated tiles in TMX maps are now supported.
- Made possible to use any actor for tooltips.
- Improved cross-platform reflection api for annotations.
- NinePatch#scale now also scales middle patch size.
- GLFrameBuffer is now abstract, renamed setupTexture to createColorTexture, added disposeColorTexture
- Added LwjglApplicationConfiguration#gles30Context*Version, see https://github.com/libgdx/libgdx/pull/2941
- Added OpenGL error checking to GLProfiler, see https://github.com/libgdx/libgdx/pull/2889
- Updated to RoboVM 1.6

[1.6.4]
- TextField cursor and selection size changed. https://github.com/libgdx/libgdx/commit/2a830dea348948d2a37bd8f6338af2023fec9b09
- FreeTypeFontGenerator setting to improve shadows and borders.
- ScrollPane scrolls smoothly when the scrolled area is much larger than the scrollbars.
- TexturePacker sorts page regions by name.
- GlyphLayout text wrapping changed to not trim whitespace. https://github.com/libgdx/libgdx/commit/ee42693da067da7c5ddd747f051c1423d262cb96
- Fixed BitmapFont computing space width incorrectly when padding is used and no space glyph is in the font.
- Fixed TextArea cursor and selection drawing positions.
- Fixed ActorGestureListener pan and zoom when the actor is rotated or scaled.
- Fixed TextField for non-pixel display.
- Allow ellipsis string to be set on Label.
- AssetManager gets hook for handling loading failure.