@@ -120,8 +120,7 @@ public interface Vector<T extends Vector<T>> {
 	 * @return This vector for chaining. */
 	T interpolate (T target, float alpha, Interpolation interpolator);
 
-	/**
-	 * Sets this vector to a random direction
+	/** Sets this vector to the unit vector with a random direction
 	 * @return This vector for chaining */
 	T setToRandomDirection ();
 
